changing the logo

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -9,10 +9,14 @@
   <p class="title" style="text-align:center">ENT Specialist</p>
   <p>Dr. Suman Paudel is a fully accredited ENT / Head and Neck Surgeon. He qualified from the prestigious Post Graduate Institute of Medical Education and Research in Chandigarh, India in the year 2016. He has been working in Chitwan Medical College and Teaching Hospital as a Lecturer since January 2017 looking after patients in  Out patient department, admitted patients in wards and undergoing ENT surgeries. As a part of teaching hospital, Dr. Paudel has been indulging himself in teaching MBBS students regarding Otorhinolaryngology both as a lecture and bed side as clinical posting. He has also been indulged in different ENT camps in rural areas of Nepal as part of social initiative to help the needy patients and treating them. Dr. Paudel has been very keen on attending the conferences, CMEs , workshops and staying updated regarding newer advances in the field of Otorhinolaryngology.  
     <br><br>
+
+
+
     
-  <li>Member  of  <b>Society of Otolaryngologists </b>of Nepal since 2017.</li>
+  <li>Member  of  <b>Nepal Medical Council </b> since 2011.</li>  
+  <li>Member  of  <b>Society of Otolaryngologists of Nepal</b> since 2017.</li>
   <li> Member of  <b>ENT UK (United Kingdom)</b>  since 2019</li>
-  <li>Member of International Working Group on Endoscopic Ear Surgery<b>(IWGEES)</b>  since 2020. </li></p>
+  <li><b>Member of International Working Group on Endoscopic Ear Surgery(IWGEES)</b>  since 2020. </li></p>
 
   <br><br>
 <div style="text-align:center;">
