--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -8,7 +8,7 @@ fxLayoutGap="10%"
 fxLayoutGap.xs="0">
 <mat-card fxFlex="50%">
 
-        <div class="mapouter"><div class="gmap_canvas"><iframe width="400" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=ENT%20Nepal%20(Dr.%20Suman%20Paudel),%20address&t=k&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.org">embed google maps</a></div><style>.mapouter{position:relative;text-align:right;height:500px;width:400px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:400px;}</style></div>
+        <div style="text-decoration:none; overflow:hidden;max-width:100%;width:400px;height:400px;"><div id="mymap-display" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=ent+nepal+butwal&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe></div><a class="googlemap-html" href="https://www.embed-map.com" id="enablemap-data">https://www.embed-map.com</a><style>#mymap-display img{max-width:none!important;background:none!important;font-size: inherit;font-weight:inherit;}</style></div>
 <br> <u><b>Vedanta ENT Care Center</b></u>
 <br><ngb-rating [rate]="5"></ngb-rating>
 
