--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>                        
       </button>
       <a routerLink="home"> <img class="icon" src="/assets/image/unnamed.jpg"height="50px" width="50px"></a>
-      <img src="/assets/image/log.PNG"height="50px" width="150px" style="padding-left: 2vh;">
+      <img class="radius" src="/assets/image/log.PNG"height="50px" width="150px" style="padding-left: 2vh;">
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
