--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -121,6 +121,12 @@
           <p>
             <a routerLink="services/throat" style="color:white;">Throat</a>
           </p>
+          <p>
+            <a routerLink="services/endoscopy" style="color:white;">Endoscopy</a>
+          </p>
+          <p>
+            <a routerLink="services/audiology" style="color:white;">Audiology</a>
+          </p>
           
   
         </div>
@@ -160,7 +166,7 @@
           <p>
             <i class="fas fa-envelope mr-3"></i> entnepal17@gmail.com</p>
           <p>
-            <i class="fas fa-phone mr-3"></i> + 977-9857075922</p>
+            <i class="fas fa-phone mr-3"></i> +977-9867439783/9857075922</p>
          
   
         </div>
