--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -30,7 +30,7 @@ fxLayoutGap.xs="0">
         <i class="fa fa-volume-control-phone" style="font-size:36px;color:steelblue;"></i>
 </div>
 <div class="col-md-11">
-        <p style="font-size:2.5vh;font-style:italic;padding-top:2vh;color:gray">+977-9867439783</p>
+        <p style="font-size:2.5vh;font-style:italic;padding-top:2vh;color:gray">+977-9867439783/9857075922</p>
 
 </div>
 </div>
