--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -166,7 +166,7 @@
           <p>
             <i class="fas fa-envelope mr-3"></i> entnepal17@gmail.com</p>
           <p>
-            <i class="fas fa-phone mr-3"></i> +977-9867439783/9857075922</p>
+            <i class="fas fa-phone mr-3"></i>9867439783/9857075922</p>
          
   
         </div>
