--- a/src/app/audiology/audiology.component.html
+++ b/src/app/audiology/audiology.component.html
@@ -9,7 +9,7 @@
 <div class="card">
   <img src="/assets/image/jaylal.jpg" alt="John" style="width:100%">
   <h1 class="tit" style="text-align:center">Mr.Jaylal Prasad Yadav</h1>
-  <p class="title" style="text-align:center">Audilogy Specialist(Visiting Faculty)</p>
+  <p class="title" style="text-align:center">Audiology Specialist(Visiting Faculty)</p>
   <p>Mr. Jaylal prasad yadav completed his Bachelors and
     Master’s degree in the field of Audiology and Speech
     Language Pathology from Dr. M.V. Shetty College of
