--- a/src/app/flip/flip.component.html
+++ b/src/app/flip/flip.component.html
@@ -54,7 +54,7 @@ fxLayoutGap.xs="5%">
 
     <div class="flip-card-inner">
       <div class="flip-card-front">
-        <img src="/assets/image/IMG_1919.JPG" alt="Avatar" style="width:300px;height:300px;">
+        <img src="/assets/image/doc.jpg" alt="Avatar" style="width:300px;height:300px;">
       </div>
       <div class="flip-card-back">
         <h2>Friendly and Caring</h2> 
