videos are uploaded

--- a/src/app/video/video.component.html
+++ b/src/app/video/video.component.html
@@ -125,6 +125,8 @@ fxLayoutGap.xs="5%">
                                                                                                                     
                                                                                                                         </mat-card>
                                                                                                                         <mat-card fxFlex="25%">
+                                                                                                                          <iframe [src]="safeSrc16"  frameborder="0" webkitallowfullscreen mozallowfullscreen
+                                                                                                                          allowfullscreen></iframe>
                                                                                                                           
                                                                                                                           
                                                                                                                             
@@ -132,5 +134,87 @@ fxLayoutGap.xs="5%">
                                                                                                                                 
                                                                                                                                         
                                                                                                                                                 </div>
+                                                                                                                                                <div class="container"
+                                                                                                                                                fxLayout
+                                                                                                                                                fxLayout.xs="column"
+                                                                                                                                                
+                                                                                                                                                fxLayoutGap="7%"
+                                                                                                                                                fxLayoutGap.xs="5%">
+                                                                                                                                                <mat-card fxFlex="25%">
+                                                                                                                                                
+                                                                                                                                                <iframe [src]="safeSrc17"  frameborder="0" webkitallowfullscreen mozallowfullscreen
+                                                                                                                                                      allowfullscreen></iframe>
+                                                                                                                                                    </mat-card>
+                                                                                                                                                    <mat-card fxFlex="25%">
+                                                                                                                                                      <iframe [src]="safeSrc18"  frameborder="0" webkitallowfullscreen mozallowfullscreen
+                                                                                                                                                      allowfullscreen></iframe>
+                                                                                                                                                      
+                                                                                                                                                
+                                                                                                                                                        
+                                                                                                                                                            </mat-card>
+                                                                                                                                                            <mat-card fxFlex="25%">
+                                                                                                                                                              <iframe [src]="safeSrc19"  frameborder="0" webkitallowfullscreen mozallowfullscreen
+                                                                                                                                                              allowfullscreen></iframe>
+                                                                                                                                                              
+                                                                                                                                                              
+                                                                                                                                                                
+                                                                                                                                                                    </mat-card>
+                                                                                                                                                                    
+                                                                                                                                                                            
+                                                                                                                                                                                    </div>
+
+                                                                                                                                                                                    <div class="container"
+                                                                                                                                                                                    fxLayout
+                                                                                                                                                                                    fxLayout.xs="column"
+                                                                                                                                                                                    
+                                                                                                                                                                                    fxLayoutGap="7%"
+                                                                                                                                                                                    fxLayoutGap.xs="5%">
+                                                                                                                                                                                    <mat-card fxFlex="25%">
+                                                                                                                                                                                    
+                                                                                                                                                                                    <iframe [src]="safeSrc20"  frameborder="0" webkitallowfullscreen mozallowfullscreen
+                                                                                                                                                                                          allowfullscreen></iframe>
+                                                                                                                                                                                        </mat-card>
+                                                                                                                                                                                        <mat-card fxFlex="25%">
+                                                                                                                                                                                          <iframe [src]="safeSrc21"  frameborder="0" webkitallowfullscreen mozallowfullscreen
+                                                                                                                                                                                          allowfullscreen></iframe>
+                                                                                                                                                                                          
+                                                                                                                                                                                    
+                                                                                                                                                                                            
+                                                                                                                                                                                                </mat-card>
+                                                                                                                                                                                                <mat-card fxFlex="25%">
+                                                                                                                                                                                                  <iframe [src]="safeSrc22"  frameborder="0" webkitallowfullscreen mozallowfullscreen
+                                                                                                                                                                                                  allowfullscreen></iframe>
+                                                                                                                                                                                                  
+                                                                                                                                                                                                  
+                                                                                                                                                                                                    
+                                                                                                                                                                                                        </mat-card>
+                                                                                                                                                                                                        
+                                                                                                                                                                                                                
+                                                                                                                                                                                                                        </div>
+                                                                                                                                                                                                                        <div class="container"
+                                                                                                                                                                                                                        fxLayout
+                                                                                                                                                                                                                        fxLayout.xs="column"
+                                                                                                                                                                                                                        
+                                                                                                                                                                                                                        fxLayoutGap="7%"
+                                                                                                                                                                                                                        fxLayoutGap.xs="5%">
+                                                                                                                                                                                                                        <mat-card fxFlex="25%">
+                                                                                                                                                                                                                        
+                                                                                                                                                                                                                        <iframe [src]="safeSrc23"  frameborder="0" webkitallowfullscreen mozallowfullscreen
+                                                                                                                                                                                                                              allowfullscreen></iframe>
+                                                                                                                                                                                                                            </mat-card>
+                                                                                                                                                                                                                            <mat-card fxFlex="25%">
+                                                                                                                                                                                                                             
+                                                                                                                                                                                                                              
+                                                                                                                                                                                                                        
+                                                                                                                                                                                                                                
+                                                                                                                                                                                                                                    </mat-card>
+                                                                                                                                                                                                                                    <mat-card fxFlex="25%">
+                                                                                                                                                                                                                                      
+                                                                                                                                                                                                                                      
+                                                                                                                                                                                                                                        
+                                                                                                                                                                                                                                            </mat-card>
+                                                                                                                                                                                                                                            
+                                                                                                                                                                                                                                                    
+                                                                                                                                                                                                                                                            </div>
                                                                                                            
       </div>
